--- a/package.json
+++ b/package.json
@@ -10,10 +10,11 @@
   },
   "dependencies": {
     "axios": "^1.5.0",
-    "next": "^12.2.3",
+    "next": "^14.0.1",
+    "node": "^21.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "zustand": "^4.4.1"
+    "zustand": "^4.4.6"
   },
   "devDependencies": {
     "@types/node": "18.6.1",
