--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "node": "^21.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-toastify": "^9.1.3",
     "zustand": "^4.4.6"
   },
   "devDependencies": {
