--- a/package.json
+++ b/package.json
@@ -9,23 +9,27 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.2.1",
     "axios": "^1.5.0",
     "next": "^14.0.1",
+    "next-transpile-modules": "^10.0.1",
     "node": "^21.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^9.1.0",
     "react-toastify": "^9.1.3",
+    "redux-persist": "^6.0.0",
     "zustand": "^4.4.6"
   },
   "devDependencies": {
     "@types/node": "18.6.1",
-    "@types/react": "18.0.15",
-    "@types/react-dom": "18.0.6",
-    "autoprefixer": "^10.4.15",
+    "@types/react": "^18.0.15",
+    "@types/react-dom": "^18.0.6",
+    "autoprefixer": "^10.4.18",
     "eslint": "8.20.0",
     "eslint-config-next": "12.2.3",
-    "postcss": "^8.4.29",
-    "tailwindcss": "^3.3.3",
+    "postcss": "^8.4.35",
+    "tailwindcss": "^3.4.1",
     "typescript": "4.7.4"
   }
 }
