--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "a-code-daily",
-  "version": "2.0.0",
+  "version": "2.0.1",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -20,6 +20,7 @@
     "react-redux": "^9.1.0",
     "react-toastify": "^9.1.3",
     "redux-persist": "^6.0.0",
+    "rolling-search": "^1.0.1",
     "zustand": "^4.4.6"
   },
   "devDependencies": {
