--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@mui/material-nextjs": "^5.15.11",
     "@react-native-async-storage/async-storage": "^1.23.1",
     "@reduxjs/toolkit": "^2.2.1",
+    "@types/react-date-range": "^1.4.9",
     "axios": "^1.5.0",
     "moment": "^2.30.1",
     "next": "^14.0.1",
@@ -23,6 +24,7 @@
     "node": "^21.1.0",
     "react": "^18.2.0",
     "react-apexcharts": "^1.4.1",
+    "react-date-range": "^2.0.1",
     "react-dom": "^18.2.0",
     "react-redux": "^9.1.0",
     "react-toastify": "^9.1.3",
