--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@reduxjs/toolkit": "^2.2.1",
     "@types/react-date-range": "^1.4.9",
     "axios": "^1.5.0",
+    "cal-heatmap": "^4.2.4",
     "moment": "^2.30.1",
     "next": "^14.0.1",
     "next-transpile-modules": "^10.0.1",
