--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "a-code-daily",
-  "version": "2.0.1",
+  "version": "3.0.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -17,8 +17,8 @@
     "@react-native-async-storage/async-storage": "^1.23.1",
     "@reduxjs/toolkit": "^2.2.1",
     "@types/react-date-range": "^1.4.9",
-    "axios": "^1.5.0",
-    "cal-heatmap": "^4.2.4",
+    "@types/react-icons": "^3.0.0",
+    "axios": "^1.7.5",
     "moment": "^2.30.1",
     "next": "^14.0.1",
     "next-transpile-modules": "^10.0.1",
